# SysY_Compiler

./: CMakeLists.txt  TestClass.h  error.txt  exceptions.h  main.cpp  testMachine.py  tools.h
IR/: IRStatements.h  IRVar.h
IRVirtualMachine/: MIRSymbolTable.h  MIRSymbolTableItem.h  MIRVirtualMachine.h  MRAM.h
IR_generate/: IRGenerator.h  MExpCalculator.h  MLabelManager.h  MSymbolTable.cpp  MSymbolTable.h  MSymbolTableItem.cpp  MSymbolTableItem.h
ast_generate/: ASTGenerator.h  syntax_exceptions.h  syntax_nodes.cpp  syntax_nodes.h
exception_management/: MExceptionManager.cpp  MExceptionManager.h  exceptions.h
lexical_analyzer/: LexicalAnalyzer.h  exceptions.h  lexical_tools.cpp  lexical_tools.h
semantic_analysis/: MSymbol.h  MSymbolTable.h  MSymbolTableItem.cpp  MSymbolTableItem.h  SemanticAnalyzer.h  SymbolTable.h
syntax_analysis/: SyntaxAnalyzer.h  syntax_nodes.cpp  syntax_nodes.h  syntax_nodes_classes.h
